--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
   <div class="row">
     <div class="col-md-6">
       <div class="resume-wrap ftco-animate">
-        <span class="date">Jan 2023 – Present</span>
+        <span class="date">DEC 2023 – Present</span>
         <h2>Senior Full Stack Developer</h2>
         <span class="position">Best Buy, Richfield, MN</span>
         <p class="mt-4">Led modernization of the internal order fulfillment platform by transitioning to a cloud-native microservices architecture using Spring Boot and Angular 14 hosted on Azure Kubernetes.</p>
@@ -561,7 +561,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">+19895063838</a></p>
+	            <p><a href="tel://0101010101">+1(313)437-3170</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
