Updated project with new changes

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <span class="date">DEC 2023 – Present</span>
         <h2>Senior Full Stack Developer</h2>
         <span class="position">Best Buy, Richfield, MN</span>
-        <p class="mt-4">Led modernization of the internal order fulfillment platform by transitioning to a cloud-native microservices architecture using Spring Boot and Angular 14 hosted on Azure Kubernetes.</p>
+        <p class="mt-4">worked on modernization of the internal order fulfillment platform by transitioning to a cloud-native microservices architecture using Spring Boot and Angular 14 hosted on Azure Kubernetes.</p>
         <ul>
           <li>Developed scalable microservices using Java 17 and Spring Boot</li>
           <li>Built responsive UIs using Angular 14 and Angular Material</li>
@@ -560,6 +560,7 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
           		</div>
+
           		<h3 class="mb-4">Contact Number</h3>
 	            <p><a href="tel://0101010101">+1(313)437-3170</a></p>
 	          </div>
