--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 			            <h2>Full Stack Developer</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
-			            <p><a href="https://www.linkedin.com/in/srikartharala/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
+			            <p><a href="https://www.linkedin.com/in/srikarnaidutharala/" class="btn btn-primary py-3 px-4">LinkedIn</a> 
 							<a href="https://github.com/Srikarjb" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -297,7 +297,7 @@
 									<span class="number" data-number="15">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://www.linkedin.com/in/srikartharala/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://www.linkedin.com/in/srikarnaidutharala/" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
 							</div>
 						</div>
 					</div>
@@ -595,7 +595,7 @@
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li> 
-					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/srikartharala/"><span class="icon-linkedin"></span></a></li>
+					  <li class="ftco-animate"><a href="https://www.linkedin.com/in/srikarnaidutharala/"><span class="icon-linkedin"></span></a></li>
 				      <li class="ftco-animate"><a href="srikarnaidutharala"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
